ArrayList -> List, ava 23+ blocks CGLIB's reflection-based ClassLoader.defineClass